[tool.poetry]
name = "cry-baby"
version = "0.1.0"
description = ""
authors = ["ericcbonet <ericcbonet@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10,<3.12"
hexalog = "^0.6.0"
pyaudio = "^0.2.14"
numpy = "^1.26.3"
keras = "^2.13.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"

tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine == 'arm64'"}
tensorflow = { version = "^2.13.0", platform = "darwin", markers = "platform_machine != 'arm64'"}
tensorflow-io-gcs-filesystem = { version="^0.34.0", platform = "darwin", markers = "platform_machine == 'arm64'"}
huggingface-hub = {  version =  "^0.20.3", platform = "darwin", markers = "platform_machine=='arm64'", extras = ["tensorflow"] }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
